[package]
name = "yaxos"
version = "0.1.0"
edition = "2021"


[dependencies]
bootloader = { version = "0.9.8", features = ["map_physical_memory"]}
volatile = "0.2.6"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.8"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
