[package]
name = "yaxos"
version = "0.1.0"
edition = "2021"


[dependencies]
bootloader = { version = "0.9.8", features = ["map_physical_memory"]}
volatile = "0.2.6"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.8"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"
]
test-success-exit-code = 33         # (0x10 << 1) | 1
